--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./images/mobile-icon.png" type="image/png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -65,6 +66,7 @@
             просто не существует. Исследователи
             <a
               class="article__link"
+              target="_blank"
               href="https://dana.org/article/multicosts-of-multitasking/"
             >
               выяснили </a
@@ -131,10 +133,10 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
+        <h3 class="title-decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
         <article class="article">
-          <h3 class="title-decor">
-            5 простых (на самом деле не очень) советов
-          </h3>
           <h4 class="title-decor article__title">Представьте небо и облака</h4>
           <p class="article__text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
@@ -162,6 +164,7 @@
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a
               class="article__link"
+              target="_blank"
               href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
             >
               показал </a
