after review final

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </p>
         </article>
       </section>
-      <section class="content">
+      <section class="content not-typcal-content">
         <h2 class="content__title">Что снижает концентрацию внимания?</h2>
         <article class="article">
           <h3 class="title-decor">Многозадачность</h3>
@@ -129,7 +129,7 @@
         </article>
       </section>
       <section class="content">
-        <h2 class="content__title">
+        <h2 class="content__title special-content__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
